tests/ui/parser/keyword-match-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py match'

fn main() {
    let match = "foo"; //~ error: expected identifier, found keyword `match`
}
